--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -20,8 +20,10 @@ jobs:
           kernel-branch: main
           config: dandelion_defconfig
           arch: arm64
-          aosp-gcc: false
+          aosp-gcc: true
           aosp-clang: true
+          ksu: true
+          ksu-version: 0.9.5
           android-version: 12
           aosp-clang-version: r383902
           python-27: true
